@@ -28,6 +28,7 @@ and ideas to make this software available.
 	Greg Retowski <greg@rage.net>
 	Michael Shuey <shuey@ecn.purdue.edu>
 	Gero Treuner <gero@faveve.uni-stuttgart.de>
+	Jarkko Turkulainen <jt@wapit.com>
 	Stein Vrale <stein@terminator.net>
 	Simon Wilkinson <sxw@sxw.org.uk>
 
