@@ -10,16 +10,16 @@
 # Your LDAP server. Must be resolvable without using LDAP.
 host 127.0.0.1
 
+# The distinguished name of the search base.
+base dc=padl,dc=com
+
 # Another way to specify your LDAP server is to provide an
 # uri with the server name. This allows to use
 # Unix Domain Sockets to connect to a local LDAP Server.
-# uri ldap://127.0.0.1/
-# uri ldaps://127.0.0.1/
-# uri ldapi://%2fvar%2frun%2fldapi_sock/
+#uri ldap://127.0.0.1/
+#uri ldaps://127.0.0.1/   
+#uri ldapi://%2fvar%2frun%2fldapi_sock/
 # Note: %2f encodes the '/' used as directory separator
-
-# The distinguished name of the search base.
-base dc=padl,dc=com
 
 # The LDAP version to use (defaults to 3
 # if supported by client library)
@@ -133,3 +133,15 @@ base dc=padl,dc=com
 #nss_base_aliases	ou=Aliases,dc=padl,dc=com?one
 #nss_base_netgroup	ou=Netgroup,dc=padl,dc=com?one
 
+# Netscape SDK LDAPS
+#ssl on
+#sslpath /etc/ssl/certs/cert7.db
+
+# OpenLDAP start_tls
+ssl start_tls
+tls_checkpeer yes
+tls_cacertfile	/etc/ssl/ca.cert
+tls_cacertdir /etc/ssl/certs
+
+# OpenLDAP LDAPS
+#ssl on
